# EfficientScheduler

./: Cargo.toml  Cargo.toml.bak  README.md
.github/workflows/: ci.yml  ci.yml.bak
modules/: config.toml  customize.sh  module.prop  service.sh
modules/config/: 9000.toml.bak
modules/vtools/: gen_json.sh  init_vtools.sh  powercfg.sh
src/: logger.rs  main.rs
src/framework/: mod.rs
src/framework/config/: data.rs  mod.rs
src/framework/scheduler/: mod.rs
src/framework/scheduler/dump/: mod.rs  power.rs  topapps.rs
src/framework/scheduler/looper/: buffer.rs  cpu.rs  mod.rs
src/framework/scheduler/looper/buffer/: mod.rs  tmgp.toml
task/: Cargo.toml
task/src/: main.rs  main.rs.bak
