# Copyright 2023-2025, [rust@localhost] $ (@3532340532)
# 
# This file is part of EfficientScheduler.
# 
# EfficientScheduler is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option)
# any later version.
# 
# EfficientScheduler is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
# 
# You should have received a copy of the GNU General Public License along
# with EfficientScheduler. If not, see <https://www.gnu.org/licenses/>.

[workspace]
members = ["task"]

[package]
name = "EfficientScheduler"
version = "1.1.0"
edition = "2024"
description = "生于生时，亡于亡刻"
authors = ["ruu"]

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
dumpsys-rs = { git = "https://github.com/shadow3aaa/dumpsys-rs" }
flexi_logger = "0.30.0"
frame-analyzer = "0.3.3"
libc = "0.2.169"
log = "0.4.25"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
sysinfo = "0.33.1"
tempfile = "3.18.0"
toml = "0.8.20"

[build-dependencies]
anyhow = "1.0.95"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
vergen = { version = "9.0.4", features = ["build", "cargo", "rustc", "si"] }

[profile.dev]
overflow-checks = false
# debug-assertions = true
opt-level = 3
strip = true

[profile.release]
debug = true
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
